--- a/form/index.html
+++ b/form/index.html
@@ -136,7 +136,7 @@
                 </div>
               </div>
 
-              <div class="post-box remove-padding">
+              <!-- <div class="post-box remove-padding">
                 <div class="row widget-sidebar form-group">
                   <p class="w-100">
                     Unique Code <sup class="required">*</sup>
@@ -148,7 +148,7 @@
                   <input type="text" class="form-control" id="code" name="code" placeholder="Your Answer" />
                   <p class="error-msg" id="code-error"></p>
                 </div>
-              </div>
+              </div> -->
 
               <div class="post-box remove-padding">
                 <div class="row widget-sidebar form-group">
@@ -173,7 +173,7 @@
                     <br>
                   </p>
                   <br>
-                  <input type="number" min="1" class="form-control" id="num-pref" name="num-pref" value = "1" style="width: 15%;"/>
+                  <input type="number" min="1" class="form-control" id="num-pref" name="num-pref" value = "2" style="width: 15%;"/>
                   <p class="error-msg w-100" id="num-pref-error"></p>
                 </div>
               </div>
@@ -190,6 +190,32 @@
                     </select>
                     <p class="error-msg" id="pref1-error"></p>
                   </div>
+                </div>
+                <div id="preference-2" class="post-box remove-padding">
+                  <div class="row widget-sidebar form-group">
+                    <p>
+                      Preference #2 <sup class="required">*</sup>
+                      <br>
+                    </p>
+                    <select class="form-control prefs" id="pref2" name="pref2" placeholder="Your Answer" style="width:1500px">
+                      <option value="-Select-">-Select-</option>
+                    </select>
+                    <p class="error-msg" id="pref2-error"></p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="post-box remove-padding">
+                <div class="row widget-sidebar form-group">
+                  <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="" id="check-read">
+                    <label class="form-check-label" for="check-read">
+                      <p>
+                        I have thoroughly read all the guidelines here at the link <sup class="required">*</sup>
+                      </p>
+                    </label>
+                  </div>
+                  <p class="error-msg w-100" id="check-read-error"></p>
                 </div>
               </div>
 
