--- a/form/index_done.html
+++ b/form/index_done.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <link rel="shortcut icon" type="image/jpg" href="assets/img/iitgn_logo-1.png"/>
-  <title>HSS Pre-Registration</title>
+  <title>HSS/MS Registration</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -31,7 +31,7 @@
     <div class="intro-content display-table">
       <div class="table-cell">
         <div class="container">
-          <h1 class="title-a" style="color: white;font-family: 'Raleway';">HSS Course Allocation</h1>
+          <h1 class="title-a" style="color: white;font-family: 'Raleway';">HSS/MS Course Allocation</h1>
           <div class="line-mf mb-5" style="background-color: white;"></div>
           <h5 class="subtitle-a" style="color: white;"></h5>
         </div>
@@ -49,7 +49,7 @@
 
             <div class="post-box remove-padding">
               <div class="row widget-sidebar">
-                <h4 class="sidebar-title" style="font-family: Roboto;">Pre-Registration for HSS Courses - Sem I, 2021-22</h4>
+                <h4 class="sidebar-title" style="font-family: Roboto;">Registration for HSS/MS Courses - Sem I, 2022-23</h4>
                 <p>The form is no longer accepting responses.</p>
               </div>
               <div class="col-md-2"></div>
